// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VmStatus vm /> renders correctly 1`] = `
Array [
  <span
    aria-hidden="true"
    class="vm-status-icon pficon pficon-off"
  />,
  "Off",
]
`;

exports[`<VmStatus vm pod /> renders correctly 1`] = `<StateOff />`;

exports[`<VmStatus vm pod /> renders correctly 2`] = `<StateRunning />`;

exports[`<VmStatus vm pod /> renders correctly 3`] = `
<StateError
  linkTo="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  message="fail description for Ready"
>
  Pod Error
</StateError>
`;

exports[`<VmStatus vm pod /> renders correctly 4`] = `
<StateError
  linkTo="/k8s/ns/default/pods/undefined/events"
>
  Pod Error
</StateError>
`;

exports[`<VmStatus vm pod /> renders correctly 5`] = `<StateStarting />`;

exports[`<VmStatus vm pod /> renders correctly 6`] = `<StateUnknown />`;

exports[`<VmStatus vm pod /> renders correctly 7`] = `
<StateError
  linkTo="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  message="Failure backend description"
>
  VM Error
</StateError>
`;
